# camera_tracker

./: .gitignore  CMakeLists.txt  README.md
include/: facetracker.hpp
sample/: .main.cpp.swp  capture.cpp
src/: capture.cpp  facetracker.cpp
